BS4Kへの対応を追加
